--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "jest": "^26.6.3",
         "mini-css-extract-plugin": "^1.3.3",
         "multer": "^1.3.0",
+        "node-sass": "^5.0.0",
         "nodemon": "^2.0.6",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
@@ -48,6 +49,7 @@
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.2",
         "redux-promise": "^0.6.0",
+        "sass-loader": "^10.1.1",
         "socket.io": "^3.0.4",
         "socket.io-client": "^3.0.4",
         "spiced-pg": "^1.0.4",
