--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
         "react-dom": "^17.0.1",
         "react-icons": "^4.1.0",
         "react-redux": "^7.1.0",
+        "react-responsive": "^8.2.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
         "react-test-renderer": "^17.0.1",
+        "react-toggle": "^4.1.1",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.2",
         "redux-promise": "^0.6.0",
