--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "axios": "^0.21.1",
         "babel-loader": "^8.2.2",
         "bcryptjs": "^2.4.3",
+        "bootstrap": "^4.6.0",
         "compression": "^1.7.0",
         "concurrently": "^5.3.0",
         "cookie-session": "^2.0.0-rc.1",
@@ -37,12 +38,16 @@
         "express": "^4.14.0",
         "jest": "^26.6.3",
         "mini-css-extract-plugin": "^1.3.3",
+        "moment": "^2.29.1",
         "multer": "^1.3.0",
         "node-sass": "^5.0.0",
         "nodemon": "^2.0.6",
         "react": "^17.0.1",
+        "react-bootstrap": "^1.5.0",
         "react-dom": "^17.0.1",
         "react-icons": "^4.1.0",
+        "react-moment": "^1.1.1",
+        "react-particles-js": "^3.4.1",
         "react-redux": "^7.1.0",
         "react-responsive": "^8.2.0",
         "react-router": "^5.0.1",
@@ -52,6 +57,7 @@
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.2",
         "redux-promise": "^0.6.0",
+        "redux-thunk": "^2.3.0",
         "sass-loader": "^10.1.1",
         "socket.io": "^3.0.4",
         "socket.io-client": "^3.0.4",
