--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "node-sass": "^5.0.0",
         "nodemon": "^2.0.6",
         "react": "^17.0.1",
+        "react-alert": "^7.0.2",
         "react-bootstrap": "^1.5.0",
         "react-dom": "^17.0.1",
         "react-icons": "^4.1.0",
@@ -52,6 +53,7 @@
         "react-responsive": "^8.2.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
+        "react-spring": "^8.0.27",
         "react-test-renderer": "^17.0.1",
         "react-toggle": "^4.1.1",
         "redux": "^4.0.5",
@@ -62,6 +64,7 @@
         "socket.io": "^3.0.4",
         "socket.io-client": "^3.0.4",
         "spiced-pg": "^1.0.4",
+        "toasted-notes": "^3.2.0",
         "uid-safe": "^2.1.4",
         "webpack": "^5.11.0",
         "webpack-cli": "^4.2.0",
