--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "nodemon": "^2.0.6",
         "react": "^17.0.1",
         "react-alert": "^7.0.2",
-        "react-bootstrap": "^1.5.0",
+        "react-bootstrap": "^1.5.2",
         "react-dom": "^17.0.1",
         "react-icons": "^4.1.0",
         "react-moment": "^1.1.1",
@@ -53,8 +53,10 @@
         "react-responsive": "^8.2.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
+        "react-scroll-parallax": "^2.3.5",
         "react-spring": "^8.0.27",
         "react-test-renderer": "^17.0.1",
+        "react-tiny-link": "^3.6.1",
         "react-toggle": "^4.1.1",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.2",
