--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@babel/polyfill": "^7.4.3",
         "@babel/preset-env": "^7.12.11",
         "@babel/preset-react": "^7.12.10",
+        "@material-ui/core": "^4.11.3",
         "@react-icons/all-files": "^4.1.0",
         "@testing-library/react": "^11.2.2",
         "aws-sdk": "^2.815.0",
