--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "react": "^17.0.1",
         "react-alert": "^7.0.2",
         "react-bootstrap": "^1.5.2",
+        "react-burger-menu": "^3.0.6",
         "react-dom": "^17.0.1",
         "react-icons": "^4.1.0",
         "react-moment": "^1.1.1",
